*Fix a bug with the plugin info page. Using absolute path now. *Improve styling of the alignment setting.

--- a/assets/css/customizer.css
+++ b/assets/css/customizer.css
@@ -29,3 +29,14 @@
   width: 100% !important;
   height: 100px
 }
+
+label.alignleft{
+  line-height: 28px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+select.alignleft{
+  width: auto!important;
+  min-width: 160px;
+}
